force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/tdc_tsw__SMS_APP_Number__c.object-meta.xml
<CustomObject>
    <label>SMS APP Number</label>
    <nameField>
        <label>SMS APP Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS APP Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>