force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Number_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Number_Type__c</fullName>
    <label>Number Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>