force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__Sender_Profile__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Sender_Profile__c</fullName>
    <label>Sender Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>