force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/fields/tdc_tsw__SMS_Keyword__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__SMS_Keyword__c</fullName>
    <description>This field is used to store the unique keywords for shortcode number type only.</description>
    <inlineHelpText>Unique keywords for shortcode number type</inlineHelpText>
    <label>SMS Keyword</label>
    <type>TextArea</type>
</CustomField>