force-app/main/default/objects/tdc_tsw__SMS_APP_Number__c/recordTypes/tdc_tsw__OrgConfig.recordType-meta.xml
<RecordType>
    <fullName>tdc_tsw__OrgConfig</fullName>
    <active>true</active>
    <label>OrgConfig</label>
</RecordType>